<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_outline_filter_alt_24"
        android:title="@string/menu_item_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
         
        android:title="Display Settings"
        app:showAsAction="never">
        <menu>
            <item android:title="Style">
                <menu>
                    <group android:checkableBehavior="single">
                        <item android:id="@+id/style_grid" android:title="Grid" />
                        <item android:id="@+id/style_list" android:title="List" android:checked="true"/>
                    </group>
                </menu>
            </item>
            <item android:title="Sort">
                <menu>
                    <group android:checkableBehavior="single">
                        <item android:id="@+id/sort_default" android:title="Default" android:checked="true"/>
                        <item android:id="@+id/sort_delay" android:title="Delay" />
                        <item android:id="@+id/sort_name" android:title="Name A-Z" />
                    </group>
                </menu>
            </item>
            <item android:title="Layout">
                <menu>
                    <group android:checkableBehavior="single">
                        <item android:id="@+id/layout_loose" android:title="Loose" />
                        <item android:id="@+id/layout_standard" android:title="Standard" android:checked="true"/>
                        <item android:id="@+id/layout_tight" android:title="Tight" />
                    </group>
                </menu>
            </item>
            <item android:title="Size">
                <menu>
                    <group android:checkableBehavior="single">
                        <item android:id="@+id/size_standard" android:title="Standard" android:checked="true"/>
                        <item android:id="@+id/size_shrink" android:title="Shrink" />
                        <item android:id="@+id/size_min" android:title="Min" />
                    </group>
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menu_item_add_config"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/import_qrcode"
                android:title="@string/menu_item_import_config_qrcode"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_clipboard"
                android:title="@string/menu_item_import_config_clipboard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_local"
                android:title="@string/menu_item_import_config_local"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_policy_group"
                android:title="@string/menu_item_import_config_policy_group"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vmess"
                android:title="@string/menu_item_import_config_manually_vmess"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vless"
                android:title="@string/menu_item_import_config_manually_vless"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_ss"
                android:title="@string/menu_item_import_config_manually_ss"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_ssr"
                android:title="@string/menu_item_import_config_manually_ssr"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_socks"
                android:title="@string/menu_item_import_config_manually_socks"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_http"
                android:title="@string/menu_item_import_config_manually_http"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_trojan"
                android:title="@string/menu_item_import_config_manually_trojan"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_wireguard"
                android:title="@string/menu_item_import_config_manually_wireguard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_hysteria2"
                android:title="@string/menu_item_import_config_manually_hysteria2"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/delete_invalid"
        android:title="@string/menu_delete_invalid"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_all"
        android:title="@string/menu_delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_all"
        android:title="@string/menu_export_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/ping_all"
        android:title="@string/title_ping_all_server"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update"
        app:showAsAction="never" />
</menu>